# rand_benchmark

./: .gitignore  CMakeLists.txt  readme.md
rand_benchmark/: CMakeLists.txt  rand_benchmark.cpp  rand_benchmark.h
